# Zero

./: .gitignore  README.md  plan.md  pyproject.toml
src/zero/: __init__.py
src/zero/analyzers/: cycle_detector.py  stale_detector.py
src/zero/cli/: __main__.py  args.py
src/zero/compilers/: __init__.py  base.py  gcc.py
src/zero/graph/: constructor.py  nodes.py
src/zero/interface/: build.py  precomp_lib.py  target.py  types.py
src/zero/orchestrator/: orchestrator.py
src/zero/reporter/: get.py  reporter.py
src/zero/utils/: module_loader.py
zero/: __init__.py
zero/analysis/: cycle_detector.py
zero/builder/: builder.py
zero/cli/: main.py
zero/compilers/: __init__.py  base.py  clang.py  clangxx.py  gcc.py  get.py  gxx.py  types.py
zero/errors/: __init__.py  errors.py
zero/graph/: builder.py  constructor.py  nodes.py  printer.py  visitor.py
zero/interface/: build.py  executable.py  headers.py  lib.py  library.py  precomp_lib.py  shared_lib.py  source.py  static_lib.py  target.py
zero/nodes/: nodes.py  printer.py  visitor.py
zero/orchestrator/: config.py  executor.py  orchestrator.py
zero/reporter/: __init__.py
zero/utils/: __init__.py  module_loader.py
