[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-build"
version = "0.1.0"
description = "A clean, pythonic, DAG-based C/C++ build system."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Haseeb", email = "haseeeb8j@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kxmtkw/zero"

[tool.setuptools.packages.find]
where = ["."]
include = ["zero"]