[project]
name = "zero-build"
version = "0.1.2"
description = "A clean, pythonic, DAG-based C/C++ build system."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Haseeb", email = "haseeeb8j@gmail.com" }
]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
zero = "zero.cli.main:main"

[project.urls]
Homepage = "https://github.com/kxmtkw/Zero"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"zero" = ["py.typed"]